--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,13 @@
         <action
             android:id="@+id/action_logInFragment_to_signUpFragment"
             app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_logInFragment_to_productInfoFragment"
+            app:destination="@id/productInfoFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/productInfoFragment"
+        android:name="com.example.mcommerce.ui.product_info.view.ProductInfoFragment"
+        android:label="fragment_product_info"
+        tools:layout="@layout/fragment_product_info" />
 </navigation>
