--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#F5F5F5</color>
+    <color name="purple_700">#6B4778</color>
+    <color name="gray">#FF888888</color>
+    <color name="gray_light">#FFDDDDDD</color>
+    <color name="purple">#FF6200EE</color>
 </resources>
