--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -94,7 +94,11 @@
         android:id="@+id/favoriteFragment"
         android:name="com.example.mcommerce.ui.favorite.view.FavoriteFragment"
         android:label="@string/favoritaFradment"
-        tools:layout="@layout/fragment_favorite" />
+        tools:layout="@layout/fragment_favorite" >
+        <action
+            android:id="@+id/action_favoriteFragment_to_productInfoFragment"
+            app:destination="@id/productInfoFragment" />
+    </fragment>
 
 <!--    <fragment-->
 <!--        android:id="@+id/orderFragment"-->
