--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.MCommerce" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/blue</item>
+        <!-- الأبيض كلون ثانوي -->
+        <item name="colorSecondary">@color/white</item>
     </style>
 
     <style name="Theme.MCommerce" parent="Base.Theme.MCommerce" />
