--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,7 +16,7 @@
         android:icon="@drawable/profile"
         android:title="@string/profile" />
     <item
-        android:id="@+id/settingFragment"
+        android:id="@+id/navigation_setting"
         android:icon="@drawable/setting"
         android:title="@string/setting" />
 
