--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -44,20 +44,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/logIn"
+        app:layout_constraintEnd_toEndOf="@+id/et_passwordLogin"
         app:layout_constraintStart_toStartOf="@+id/et_passwordLogin"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/et_passwordLogin" />
 
     <TextView
         android:id="@+id/tv_goToSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/go_to_signUp"
         android:textColor="@color/blue"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_logIn"
-        app:layout_constraintStart_toEndOf="@+id/btn_logIn"
-        app:layout_constraintTop_toTopOf="@+id/btn_logIn" />
+        app:layout_constraintEnd_toEndOf="@+id/textView10"
+        app:layout_constraintStart_toStartOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -89,5 +90,5 @@
         android:text="@string/message_acount2"
         app:layout_constraintEnd_toEndOf="@+id/et_passwordLogin"
         app:layout_constraintStart_toStartOf="@+id/et_passwordLogin"
-        app:layout_constraintTop_toBottomOf="@+id/et_passwordLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_logIn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
